--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db-down": "docker-compose down"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.17.1",
+    "pg": "^8.8.0",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
