--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat-app",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/socket.js",
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,7 +14,8 @@
     "body-parser": "^1.20.0",
     "express": "^4.17.1",
     "pg": "^8.8.0",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
