--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "chat-app",
   "version": "1.0.0",
   "description": "",
-  "main": "src/socket.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/socket.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db-up": "docker-compose up -d",
     "db-status": "docker-compose ps",
